--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Site Title
+title:            Lifehack Studios
 description:      Describe your website here.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
