--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Lifehack Studios
 description:      Describe your website here.
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              
+url: lhstudios.github.io/lhstudios
 
 # Owner/author information
 owner:
